--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -92,7 +92,7 @@
                         <li><a>Договора</a></li>
                         <li><a href="<?=$this->baseUrl('manager/counseling-structure/lines')?>">Линии Консультации</a></li>
                         <li><a href="<?=$this->baseUrl('manager/tariffication/index')?>">Тарифы</a></li>
-                        <li><a>Группы/Специалисты</a></li>
+                        <li><a href="<?=$this->baseUrl('manager/counseling-structure/groups')?>">Группы/Специалисты</a></li>
                         <li><a>Настройка доступа</a></li>
                     </ul>
                 </div>
