--- a/app/modules/manager/views/scripts/tariffication/add-tariff.ajax.phtml
+++ b/app/modules/manager/views/scripts/tariffication/add-tariff.ajax.phtml
@@ -3,7 +3,7 @@
     <tfoot>
         <tr>
             <td>
-                <input type="hidden" name="line" value="">
+                <input type="hidden" name="line" value="10">
                 <button type="button" name="send">Сохранить</button>
             </td>
         </tr>
